--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -6,7 +6,7 @@
     "dev": "vite ."
   },
   "dependencies": {
-    "@tato30/vue-pdf": "*"
+    "@pauloschussler/vue-pdf": "*"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
